@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: ac_bgl_init.m4,v 1.1 2005-08-24 18:22:51 achu Exp $
+## $Id: ac_bgl_cerebrod_init_script.m4,v 1.1 2005-08-24 18:31:43 achu Exp $
 ##*****************************************************************************
 
 AC_DEFUN([AC_BGL_CIOD],
